<resources>
    <string name="app_name">YKS Sayaç</string>
    <string name="widget">00</string>
    <string name="ekle">YKS 2020 Widget</string>
    <string name="widget2">00</string>
    <string name="ekle2">YKS 2020 Widget</string>
    <string name="widgetuc">00</string>
    <string name="ekle3">YKS 2020 Widget</string>
    <string name="welcome_image">YKS 2020 Widget</string>
    <string name="addMobKey">ca-app-pub-5047443485754315~1658664749</string>
    <string name="hosgeldin">Haydi Bakalım :)</string>
    <string name="zero">0</string>
    <string name="dil">DİL:</string>
    <string name="soz">SOZ :</string>
    <string name="ea">EA:</string>
    <string name="say">SAY:</string>
    <string name="tyt">TYT:</string>
    <string name="home_ozlu_soz">O gün üzülmemek için bugün çalış!</string>
    <string name="ayt_hesaplama">AYT PUAN HESAPLAMA</string>
    <string name="todo">TODO</string>
    <string name="cevap">CEVAP</string>
    <string name="cvp_icin_izle">Cevap İçin İzle</string>
    <string name="geri_al">Geri Al</string>
    <string name="soru_degistir">Soru Değiştir</string>
    <string name="guncel_duyurular">Güncel Duyurular</string>
    <string name="ders_egzersizleri">DERS\nEgzersizleri</string>
    <string name="matematik">Matematik</string>
    <string name="fen_bilgisi">Fen Bilgisi</string>
    <string name="sosyal_b">Sosyal B.</string>
    <string name="diploma_puani">Diploma Puanı</string>
    <string name="diploma_puan_ekle">Diploma Puanı Ekle</string>
    <string name="ayt_hesapla">AYT Hesapla</string>
    <string name="dogru">Doğru</string>
    <string name="yanlis">Yanlış</string>
    <string name="net">Net</string>
    <string name="turkce">Türkçe</string>
    <string name="tyt_puan_hesaplama">TYT Puan Hesaplama</string>
    <string name="dersler">Dersler</string>
    <string name="widget_gun">GÜN KALDI</string>
    <string name="yks_2020_ye">YKS 2020\'ye</string>
    <string name="yks_2020_w">YKS 2020\'ye</string>
    <string name="wig_gun">GÜN KALDI</string>
    <string name="cografya">COĞRAFYA</string>
    <string name="egzersiz">Egzersiz</string>
    <string name="duyurular">Duyurular</string>
    <string name="yks_puan">YKS Puan</string>
    <string name="san_ye">SANİYE</string>
    <string name="dak_ka">DAKİKA</string>
    <string name="saat">SAAT</string>
    <string name="z_len">Çözülen:</string>
    <string name="ipucu">İpucu ?</string>
</resources>
