<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    app:cardBackgroundColor="#d4f8e8"
    app:cardCornerRadius="14dp"
    app:cardElevation="0dp"
    android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:scrollbars="none">
                            <LinearLayout
                            android:id="@+id/card_ders"
                            android:layout_width="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="72dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/img_ders"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_marginStart="4dp"
                                android:contentDescription="@string/todo">
                            </ImageView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginEnd="4dp"
                                android:orientation="horizontal"
                                android:layout_gravity="center"
                                android:weightSum="8">

                                <TextView
                                    android:id="@+id/tv_ders_baslik"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/comfortaa"
                                    android:lineSpacingExtra="6sp"
                                    android:layout_weight="8"
                                    android:text="@string/cografya"
                                    android:textColor="#161616"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:text="@string/z_len"
                                    android:layout_gravity="right"
                                    android:textSize="18sp"
                                    android:fontFamily="@font/comfortaa"/>
                                <TextView
                                    android:id="@+id/tv_cozulen"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:fontFamily="@font/comfortaa"
                                    android:text="@string/zero"
                                    android:layout_gravity="right"
                                    android:layout_marginEnd="4dp"
                                    android:textSize="18sp" />

                            </LinearLayout>


                        </LinearLayout>






        </androidx.core.widget.NestedScrollView>


</androidx.cardview.widget.CardView>



