<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.EgzersizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="18"
        android:orientation="vertical"
        android:background="@drawable/bg_greedient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">
            <LinearLayout
                android:id="@+id/ust_kisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_dersadi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/msemi"
                    android:layout_marginBottom="8dp"
                    android:text="@string/todo"
                    android:textColor="#FFF"
                    android:textSize="26sp" />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/crd_soru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                app:cardBackgroundColor="#EBF6F1"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="14dp"
                android:layout_below="@id/ust_kisi"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:id="@+id/ders_mini_img"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/climate"
                            android:contentDescription="@string/todo" />
                    </FrameLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_soru"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa"
                            android:lineSpacingExtra="6sp"
                            android:gravity="center"
                            android:text="@string/todo"
                            android:textColor="#161616"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_below="@id/crd_soru">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="62dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">
                        <LinearLayout
                            android:layout_width="250dp"
                            android:layout_height="58dp"
                            android:layout_marginBottom="-59dp"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_tour2">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/fredoka_one"
                                android:gravity="center"
                                android:text="@string/cevap"
                                android:textColor="#393939"
                                android:textSize="32sp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="250dp"
                            android:layout_height="52dp"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_tour">

                            <TextView
                                android:id="@+id/tv_cevap"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/fredoka_one"
                                android:gravity="center"
                                android:text="@string/cevap"
                                android:textColor="#393939"
                                android:textSize="30sp" />
                        </LinearLayout>


                    </LinearLayout>


            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_harflik"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
            <LinearLayout
                android:id="@+id/ln_harflik2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_bottom"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:id="@+id/btn_ly_izle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:src="@drawable/confused"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mreg"
                            android:text="@string/ipucu"
                            android:textColor="#424B67"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:onClick="delete"
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:src="@drawable/left_arrow"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mreg"
                            android:text="@string/geri_al"
                            android:textColor="#424B67"
                            android:textSize="14sp" />
                    </LinearLayout>
                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:id="@+id/btn_img_degistir"
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:onClick="refresh"
                            android:src="@drawable/shuffle"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mreg"
                            android:text="@string/soru_degistir"
                            android:textColor="#424B67"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/banner_egzersiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:adSize="SMART_BANNER"
                    app:adUnitId="ca-app-pub-5047443485754315/6241456321" />

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/succses_animation"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:lottie_fileName="dogru.json" />
    </RelativeLayout>





</FrameLayout>